<resources>
    <string name="app_name">Doc Master</string>
    <string name="home">Home</string>
    <string name="pdf">PDF</string>
    <string name="word">Word</string>
    <string name="excel">Excel</string>
    <string name="ppt">PPoint</string>
    <string name="allow_permission_for_storage_access">Allow permission for storage access!</string>
    <string name="save_cta">Save</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="recipe_details_preview">This is the recipes details, some text to test the appearance of the view. It\'s time for a truly uncompromising smartphone. One that was designed and manufactured by technical enthusiasts - in close coordination with the future users. A smartphone that perfectly combines fascinating technology, groundbreaking design and breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince yourself.</string>
    <string name="recipe_title_preview">This is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">chauhan</string>
    <string name="test_email">chauhan@example.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="firebase_project_id">all-document-viewer-781b3</string>
    <string name="premium_footer">The subscription automatically renews when the\nsubscription\'s initial term comes to an end</string>
    <string name="premium_header">You are a Office\nDocs <font color="#E35F2F">PRO</font> </string>
    <string name="premium_validity">Your Pro Membership valid till %1$s</string>
    <string name="cancel_subscription"><u>CANCEL SUBSCRIPTION</u></string>
    <string name="pro">PRO</string>
    <string name="unlimited_access_to_all">Unlimited access to all</string>
    <string name="no_ads">No ads</string>
    <string name="unlimited_files">Unlimited files</string>
    <string name="premium_tools">Premium tools</string>
    <string name="doc_pro">Office Docs <font color="#E35F2F">PRO</font></string>
    <string name="mb_convert">Convert Up to 15MB</string>
    <string name="conversion_files">Conversion files\nrewarded ads</string>
    <string name="privacy"><a href="https://sites.google.com/view/office-docs-terms-of-use/home">Terms of Use</a> | <a href="https://sites.google.com/view/officedocs/home">Privacy Policy</a> </string>
    <string name="privacy_login">By creating an account, you agree to our\n<font color="#E35F2F"><a href="https://sites.google.com/view/office-docs-terms-of-use/home">Terms of Use</a> </font>&amp; <font color="#E35F2F"><a href="https://sites.google.com/view/officedocs/home">Privacy Policy</a></font> </string>
    <string name="premium_cta">Subscribe Now</string>
    <string name="cancel_premium">Auto billing  •  Cancel anytime</string>
    <string name="premium_count">1049 people went PRO this Week</string>
    <string name="ad_attribution">Ads</string>
    <string name="search_hint">Search</string>
    <string name="all">All</string>
    <string name="recent">Recent</string>
    <string name="google_drive">Google Drive</string>
    <string name="allow_storage_permission">Allow storage permission to view the files!</string>
    <string name="lost_internet_connection">Lost Internet Connection. Please try again!</string>
    <string name="choose_correct_file">Choose correct file type!</string>
    <string name="maximum_one_file_added">Maximum one file can be added</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="please_select_file">Please select a file</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="the_password_is_incorrect">The password is incorrect</string>
    <string name="invalid_range">Invalid range! Range should be between 1 and</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="share_document">Share Document!</string>
    <string name="view_horizontal">View horizontal</string>
    <string name="view_vertical">View vertical</string>
    <string name="share_view">Send as attachment</string>
    <string name="your_launcher_not_support">Your Launcher does not support</string>
    <string name="cannot_open_this_file">Can\'t open this file</string>
    <string name="updating_file">Updating files..</string>
    <string name="update_app">Please use the application in the latest version to get a great experience from the application. \n\n Thank you very much!</string>
    <string name="no_file_found">No Files Found</string>
    <string name="no_file_hint">No Files Found</string>
    <string name="no_file_recent_hint">Open file to add recent view.</string>
    <string name="tutorial">You can swipe from left to right to view next page</string>
    <string name="could_not_open_file">Could not open file!</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="color">Color</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="plz_enter_content">Please enter the content to search</string>
    <string name="press_again">Press again to exit!</string>
    <string name="no_file_bookmark">No Files</string>
    <string name="no_file_bookmark_hint">Add new file to bookmark.</string>
    <string name="mn_open">Open</string>
    <string name="mn_share_file">Share file</string>
    <string name="toast_added_bookmark">Added file to favourite!</string>
    <string name="toast_file_added">File added!</string>
    <string name="toast_removed_file">Removed file from favourite!</string>
    <string name="file_reader_tab">Reader</string>
    <string name="recent_tab">Recent</string>
    <string name="book_mark_tab">Bookmark</string>
    <string name="file_manager_tab">Store</string>
    <string name="gift_tab">Gift</string>
    <string name="slide">Slide</string>
    <string name="todo">Todo</string>
    <string name="update_nav">New Update</string>
    <string name="version_navi">Version</string>
    <string name="feedback_navi">Feedback</string>
    <string name="share_app_navi">Share app</string>
    <string name="rate_app_navi">Rate app</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Open</string>
    <string name="default_dir" translatable="false">/sdcard</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="cont_find_your_file">Can\'t Find Your File</string>
    <string name="please_choose_rating">Please choose a rating!</string>
    <string name="playstore_market_id">market://details?id=</string>
    <string name="playstore_app_link">https://play.google.com/store/apps/details?id=</string>
    <string name="favourites">Favourites</string>
    <string name="recent_files">Recent Files</string>
    <string name="label_parent_dir" translatable="false">...</string>
    <string name="reading_mode">Reading mode</string>
    <string name="this_last_version">This version is the latest version for you. Thank you for using the application.</string>
    <string name="rate_do_you_like_this_app">Do you like this App?</string>
    <string name="rate_content_rate_app">Please! Take a moment to rate 5 stars for Document. Thanks for your support!</string>
    <string name="rate_title">[Rate Dialog] All Document</string>
    <string name="rate_feedback">Please send feedback to us</string>
    <string name="rate_content_feedback">Let us better upgrade the functionality and experience for this application.</string>
    <string name="rate_feedback_hint">Suggest us what went wrong and we\'ll work on it</string>
    <string name="thank_share">Thank you for sharing your feedback</string>
    <string name="rate_content_sign">\n Version Code:</string>
    <string name="fill_feedback">Please write something</string>
    <string name="sodk_certificate_common_name">Common Name (CN)</string>
    <string name="sodk_certificate_country">Country (C)</string>
    <string name="sodk_certificate_details">Certificate Details</string>
    <string name="sodk_certificate_email">Email</string>
    <string name="sodk_certificate_org">Organisation (O)</string>
    <string name="sodk_certificate_org_unit">Organizational Unit (OU)</string>
    <string name="sodk_certificate_sign">Sign</string>
    <string name="sodk_certificates">Available Certificates</string>
    <string name="sodk_editor_accept_upper">ACCEPT</string>
    <string name="sodk_editor_author_upper">AUTHOR</string>
    <string name="sodk_editor_comment_upper">COMMENT</string>
    <string name="sodk_editor_delete_comment_upper">"DELETE
COMMENT"</string>
    <string name="sodk_editor_next_upper">NEXT</string>
    <string name="sodk_editor_previous_upper">PREVIOUS</string>
    <string name="sodk_editor_redact_apply_upper">APPLY</string>
    <string name="sodk_editor_redact_mark_upper">MARK</string>
    <string name="sodk_editor_redact_remove_upper">REMOVE</string>
    <string name="sodk_editor_reject_upper">REJECT</string>
    <string name="sodk_editor_show_changes_upper">"SHOW
CHANGES"</string>
    <string name="sodk_editor_track_changes_upper">"TRACK
CHANGES"</string>
    <string name="sodk_issued_to">Issued To</string>
    <string name="sodk_no_certificates">No certificates available - please contact your IT support</string>
    <string name="share">Share</string>
    <string name="tab_boomark">Bookmark</string>
    <string name="rate_us" translatable="false">Rate Us</string>
    <string name="allow_storage_access" translatable="false">Allow Storage Access</string>
    <string name="permission_info" translatable="false">Allow storage permission to view, edit \nand save your files.</string>
    <string name="allow" translatable="false">Allow</string>
    <string name="not_now" translatable="false">Not Now</string>
    <string name="thank_you_for_rating_us">Thank you for rating us :)</string>
    <string name="poor">Poor</string>
    <string name="bad">Bad</string>
    <string name="normal">Normal</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="paste">Paste</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="select_all">Select All</string>
    <string name="print">Print</string>
    <string name="rename">Rename</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="comments">Comments</string>
    <string name="powered_by">Powered BY</string>
    <string name="appyhigh">AppyHigh</string>
</resources>