<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rename"
        android:icon="@drawable/ic_edit"
        android:title="@string/rename"
        />

    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/ic_bookmark_black"
        android:title="@string/tab_boomark"
        />

    <item
        android:id="@+id/comment"
        android:icon="@drawable/ic_comments"
        android:title="@string/comments"
        />

    <item
        android:id="@+id/print"
        android:icon="@drawable/ic_print_file"
        android:title="@string/print"
        />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_preview"
        android:title="@string/share"
        />

    <item
        android:id="@+id/moveToTrash"
        android:icon="@drawable/ic_move_to_trash"
        android:title="@string/move_to_trash"
        />

</menu>