<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@id/select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sodk_editor_popup_item"
        android:padding="@dimen/_5sdp"
        android:text="@string/select_all"
        android:textSize="17sp" />

    <TextView
        android:id="@id/cut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sodk_editor_popup_item"
        android:padding="@dimen/_5sdp"
        android:text="@string/cut"
        android:textSize="17sp" />

    <TextView
        android:id="@id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sodk_editor_popup_item"
        android:padding="@dimen/_5sdp"
        android:text="@string/copy"
        android:textSize="17sp" />

    <TextView
        android:id="@id/paste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sodk_editor_popup_item"
        android:padding="@dimen/_5sdp"
        android:text="@string/paste"
        android:textSize="17sp" />
</LinearLayout>